add: docker 실행, 테이블, 프로시저 자동 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/healthy_path
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.sql.init.schema-locations=classpath:init/create_tables.sql
+
+spring.sql.init.mode=always
 
 mybatis.mapper-locations=classpath:mappers/*.xml
